# logisticapis

./: .gitignore  LICENSE  LICENSE.txt  README.md  logisticAPIs.sublime-project  main.py  pyproject.toml  server.py
code/: api_classes.py  api_data_output.py  api_data_processing.py  json_write.py  main.py  main_parser.py  settings.py
docs/source/: conf.py  index.rst
src/: api_classes.py  database.py  json_write.py  main.py  main_parser.py  notifier.py  settings.py
static/: desktop.ini
static/css/: style.css
static/js/: main.js
templates/: analytics.html  index.html  planner.html
